[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# solana-program = "^2.0.0"
# spl-token = { version = "^4.0.0", features = ["no-entrypoint"] }
# spl-associated-token-account = { version = "^4.0.0", features = [
#     "no-entrypoint",
# ] }
thiserror = "^2.0.0"
# ahash = "^0.8.6"
